
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* Malloc (int) ;
 int atoi (char*) ;
 int free (char*) ;
 char* read_sock (int) ;
 int sprintf (char*,char*,char*) ;
 int strlen (char*) ;
 int write_sock (int,char*) ;

int ftp_chdir(int sock, char *dirname)
{
    char *recvbuf;
    char *sendbuf;

    sendbuf = Malloc((strlen(dirname) + 6) * sizeof(char));
    sprintf(sendbuf, "CWD %s\n", dirname);

    write_sock(sock, sendbuf);
    recvbuf = read_sock(sock);

    free(sendbuf);

    if(atoi(recvbuf) == 250)
    {
 free(recvbuf);
 return 1;
    }

    free(recvbuf);
    return 0;
}
